Giraph Change Log

Release 0.2.0 - unreleased
  GIRAPH-396: HcatalogVertexInputFormat outputs a bit too often. (aching)

  GIRAPH-435: Serialize server messages for memory and less GC. (aching)

  GIRAPH-420: build formats in profiles where it works. (nitay)

  GIRAPH-421: Aggregate metrics up to master. (nitay)

  GIRAPH-434: Remove unused InputSplitPathOrganizer from BspServiceWorker (apresta via ereisman)

  GIRAPH-405: Edge-based input from HCatalog (apresta)

  GIRAPH-433: Vertex#initialize() shouldn't be called with null edges (apresta)

  GIRAPH-416: MasterObserver for user post-application customization (nitay)

  GIRAPH-427: Add committer information for Nitay Joffe to pom.xml (nitay)

  GIRAPH-417: Serialize the graph/message cache into byte[] for
  improving memory usage and compute speed. (aching)

  GIRAPH-386: ClassCastException when giraph.SplitMasterWorker=false
  (majakabiljo)

  GIRAPH-423: Allow overriding addEdge (apresta)

  GIRAPH-422: Setting the log level of the root logger to the same level
  can cause issues in Hadoop. (aching)

  GIRAPH-415: Refactor / cleanup Hadoop Counters (nitay via majakabiljo)

  GIRAPH-413: Make building Facebook profile easier. (nitay via aching)

  GIRAPH-407: Metrics Update (nitay via apresta)

  GIRAPH-404: More SendMessageCache improvements (majakabiljo)

  GIRAPH-412: Checkstyle error from Giraph-403 (majakabiljo) 

  GIRAPH-403: GraphMapper.notiftySentMessages need to be thread-safe 
  (nitay via majakabiljo)

  GIRAPH-397: We should have copies of aggregators per thread
  to avoid synchronizing on aggregate() (majakabiljo)

  GIRAPH-406: Enforce partition ids in [0, n-1] (majakabiljo)

  GIRAPH-402: slf4j dependency bug (nitay via apresta)

  GIRAPH-401: Metrics should be disabled by default (apresta)

  GIRAPH-400: Refactoring broke
  TestTextDoubleDoubleAdjacencyListVertexInputFormat (apresta)

  GIRAPH-155: Allow creation of graph by adding edges that span
  multiple workers (apresta)
