@@ -21,6 +21,8 @@ package org.apache.giraph.graph.partition;
 import org.apache.hadoop.io.Writable;
 import org.apache.hadoop.io.WritableComparable;
 
+import com.google.common.primitives.UnsignedInts;
+
 /**
  * Implements range-based partitioning from the id hash code.
  *
@@ -33,10 +35,16 @@ import org.apache.hadoop.io.WritableComparable;
 public class HashRangeWorkerPartitioner<I extends WritableComparable,
     V extends Writable, E extends Writable, M extends Writable>
     extends HashWorkerPartitioner<I, V, E, M> {
+  /** A transformed hashCode() must be strictly smaller than this. */
+  private static final long HASH_LIMIT = 2L * Integer.MAX_VALUE + 2L;
+
   @Override
   public PartitionOwner getPartitionOwner(I vertexId) {
-    int rangeSize = Integer.MAX_VALUE / getPartitionOwners().size();
-    int index = Math.abs(vertexId.hashCode()) / rangeSize;
+    long unsignedHashCode = UnsignedInts.toLong(vertexId.hashCode());
+    // The reader can verify that unsignedHashCode of HASH_LIMIT - 1 yields
+    // index of size - 1, and unsignedHashCode of 0 yields index of 0.
+    int index = (int)
+        ((unsignedHashCode * getPartitionOwners().size()) / HASH_LIMIT);
     return partitionOwnerList.get(index);
   }
 }
